--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@blueprintjs/core": "^3.22.1",
     "connected-react-router": "^6.6.1",
     "history": "^4.10.1",
+    "node-sass": "^4.13.0",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
